--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Story - The Missed Mint That Built Bitcoin Reserve</title>
     <meta name="description" content="The complete origin story of Bitcoin Reserve. How a $33,000 mistake became the foundation for helping Bitcoin dads build generational wealth." />
